# ezexl3

./: .gitignore  LICENSE  README.md  pyproject.toml
ezexl3/: __init__.py  catbench.py  cli.py  graph_svg.py  measure.py  model_diff.py  ppl_layer.py  quantize.py  readme.py  repo.py  report.py  templateREADME.md
ezexl3/templates/: basicTemplateREADME.md  fireTemplateREADME.md  forestTemplateREADME.md  greenTemplateREADME.md  punkTemplateREADME.md
templates/: basicTemplateREADME.md  fireTemplateREADME.md  forestTemplateREADME.md  greenTemplateREADME.md  templatePrompt.txt
tests/: test_catbench.py  test_cli_validation.py  test_deprecated_flags.py  test_fractional_bpws.py  test_graph_svg_labels.py  test_measure_args_passthrough.py  test_no_measurement_flags.py  test_optimized_bpws.py  test_quantize_flag_wiring.py  test_readme_revision_links.py  test_template_geometry_contract.py
