[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ezexl3"
version = "0.0.1"
description = "Single-command EXL3 quantization + measurement + reporting pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "exllamav3",
    "torch",
    "datasets",
    "safetensors",
    "numpy",
    "pandas",
    "matplotlib",
]

[project.scripts]
ezexl3 = "ezexl3.cli:main"

[tool.setuptools.package-data]
ezexl3 = ["templates/*"]


[tool.pytest.ini_options]
pythonpath = ["."]
